pathvector/src/snapshots/pathvector__dashboard__tests__snapshot_render_full_empty.snap
---
source: pathvector/src/dashboard.rs
assertion_line: 676
expression: output
---
"┌ Peers ───────────────────────────────────────────────────────────────────────┐"
"│ADDRESS          REMOTE-AS  TYPE  STATE        UPTIME    RCV   ACC   ADV      │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Routes ──────────────────────────────────────────────────────────────────────┐"
"│PREFIX         PEER          NEXT-HOP       AS-PATH              ORIGIN MED   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" Daemon: http://127.0.0.1:50051 | Refreshed: — ago | q: quit                    "
