pathvector/src/snapshots/pathvector__dashboard__tests__snapshot_render_full_populated.snap
---
source: pathvector/src/dashboard.rs
expression: output
---
"┌ Peers ───────────────────────────────────────────────────────────────────────┐"
"│ADDRESS          REMOTE-AS  TYPE  STATE        UPTIME    RCV   ACC   ADV      │"
"│10.0.0.1         65001      eBGP  Established  02:02:02  10    8     6        │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Routes ──────────────────────────────────────────────────────────────────────┐"
"│PREFIX         PEER          NEXT-HOP       AS-PATH              ORIGIN MED   │"
"│192.0.2.0/24   10.0.0.1      —              65001                IGP    —     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" Daemon: http://127.0.0.1:50051 | ● Live | q: quit                              "
