pathvector/src/snapshots/pathvector__dashboard__tests__snapshot_render_peers_empty.snap
---
source: pathvector/src/dashboard.rs
assertion_line: 568
expression: output
---
"┌ Peers ───────────────────────────────────────────────────────────────────────┐"
"│ADDRESS          REMOTE-AS  TYPE  STATE        UPTIME    RCV   ACC   ADV      │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
