pathvector/src/snapshots/pathvector__dashboard__tests__snapshot_render_peers_established.snap
---
source: pathvector/src/dashboard.rs
assertion_line: 584
expression: output
---
"┌ Peers ───────────────────────────────────────────────────────────────────────┐"
"│ADDRESS          REMOTE-AS  TYPE  STATE        UPTIME    RCV   ACC   ADV      │"
"│10.0.0.1         65001      eBGP  Established  01:01:01  5     4     3        │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
