pathvector/src/snapshots/pathvector__dashboard__tests__snapshot_render_peers_idle.snap
---
source: pathvector/src/dashboard.rs
expression: output
---
"┌ Peers ───────────────────────────────────────────────────────────────────────┐"
"│ADDRESS          REMOTE-AS  TYPE  STATE        UPTIME    RCV   ACC   ADV      │"
"│10.0.0.1         65001      iBGP  Idle         —         0     0     0        │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
