pathvector/src/snapshots/pathvector__dashboard__tests__snapshot_render_routes_empty.snap
---
source: pathvector/src/dashboard.rs
expression: output
---
"┌ Routes ────────────────────────────────────────────────────────────────────────────────┐"
"│PREFIX             PEER             NEXT-HOP         AS-PATH              ORIGIN  MED   │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"└────────────────────────────────────────────────────────────────────────────────────────┘"
