pathvector/src/snapshots/pathvector__dashboard__tests__snapshot_render_routes_with_route.snap
---
source: pathvector/src/dashboard.rs
assertion_line: 618
expression: output
---
"┌ Routes ────────────────────────────────────────────────────────────────────────────────┐"
"│PREFIX             PEER             NEXT-HOP         AS-PATH              ORIGIN  MED   │"
"│192.0.2.0/24       10.0.0.1         —                65001                IGP     —     │"
"│                                                                                        │"
"│                                                                                        │"
"└────────────────────────────────────────────────────────────────────────────────────────┘"
