pathvector/src/snapshots/pathvector__dashboard__tests__snapshot_render_status_bar_error.snap
---
source: pathvector/src/dashboard.rs
assertion_line: 644
expression: output
---
" error: connection refused | q: quit                                            "
