pathvector/src/snapshots/pathvector__dashboard__tests__snapshot_render_status_bar_live.snap
---
source: pathvector/src/dashboard.rs
expression: output
---
" Daemon: http://127.0.0.1:50051 | ● Live | q: quit                              "
