pathvector/src/snapshots/pathvector__dashboard__tests__snapshot_render_status_bar_ok.snap
---
source: pathvector/src/dashboard.rs
assertion_line: 633
expression: output
---
" Daemon: http://127.0.0.1:50051 | Refreshed: — ago | q: quit                    "
